# machine-template

./: .dockerignore  Dockerfile  README.md  compose.yml  driver.py  pyproject.toml
driver/: README.md  pyproject.toml
driver/src/driver/: __init__.py  driver.py
edge/: .env.example  Dockerfile  README.md  compose.yml  main.py  pyproject.toml
