[project]
name = "driver"
version = "0.1.0"
description = "Reusable machine driver package"
requires-python = ">=3.14"
dependencies = [
    # TODO: Add dependencies required by your driver here
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/driver"]
