[project]
name = "edge"
version = "0.1.0"
description = "Edge service for the machine"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "driver",
    "puda-python==0.0.15",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "setuptools<81",
    "websocket-client>=1.8.0",
]

[tool.uv.sources]
driver = { workspace = true }